[package]
name = "ibverbs_examples"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
byteorder = "1.4.2"
ibverbs = {git = "https://github.com/nevenoomo/rust-ibverbs"}
spin_sleep = "1.0"
structopt = "0.3.21"
